preflight/tests/ui/fail-invalid-impl.stderr
error: cannot negate the `Avionics` implementation
  --> $DIR/fail-invalid-impl.rs:13:6
   |
13 | impl !Avionics for Controller {
   |      ^

warning: unused imports: `Avionics`, `Control`, `Sensors`
 --> $DIR/fail-invalid-impl.rs:1:35
  |
1 | use preflight::{avionics_harness, Avionics, Control, Sensors};
  |                                   ^^^^^^^^  ^^^^^^^  ^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
